--- a/assets/css/add_task.css
+++ b/assets/css/add_task.css
@@ -229,6 +229,7 @@ h1 {
   line-height: 120%;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 8px;
   border: none;
 }
