--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -725,7 +725,7 @@
 
   .contact_scrolls_div {
     margin-top: 20px;
-    max-height: 895px;
+    height: calc(100vh - 150px);
   }
 }
 
@@ -739,8 +739,8 @@
   }
 
   .contact_scrolls_div {
-    width: 319px;
-    height: calc(100vh - 206px);
+    width: fit-content;
+    height: calc(100vh - 150px);
   }
 
   .contact_scrolls_card_small {
