--- a/assets/css/add_task.css
+++ b/assets/css/add_task.css
@@ -43,11 +43,10 @@ h1 {
   margin: 0px;
   margin-top: 48px;
   margin-bottom: 8px;
-  /* Version 2/t1 */
   font-size: 61px;
   font-style: normal;
   font-weight: 700;
-  line-height: 120%; /* 73.2px */
+  line-height: 120%; 
 }
 
 .side_bar_container {
@@ -229,6 +228,7 @@ h1 {
   line-height: 120%;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 8px;
   border: none;
 }
