--- a/assets/css/summary.css
+++ b/assets/css/summary.css
@@ -1,9 +1,3 @@
-/* body {
-    width: 1440px;
-    height: 1024px;
-    background: #F6F7F8;
-}  */
-
 .summary_container {
   display: flex;
   flex-direction: column;
@@ -105,11 +99,11 @@
 }
 
 .summary_todo:hover .summary_img {
-    background-image: url("../img/img_summary/penWhite.png");
+  background-image: url("../img/img_summary/penWhite.png");
 }
 
 .summary_todo:hover .summary_img_hook {
-    background-image: url("../img/img_summary/hookWhite.png");
+  background-image: url("../img/img_summary/hookWhite.png");
 }
 
 .summary_todo_nummberAndText {
@@ -126,10 +120,10 @@
 }
 
 .summary_img_hook {
-    width: 69px;
-    height: 69px;
-    background-image: url("../img/img_summary/hook.png");
-    background-size: cover;
+  width: 69px;
+  height: 69px;
+  background-image: url("../img/img_summary/hook.png");
+  background-size: cover;
 }
 
 .summary_number {
@@ -307,9 +301,45 @@
   width: 385px;
 }
 
+.animation_modal {
+  position: absolute;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #f6f7f8;
+  z-index: 900;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.animation_modal.show {
+  display: flex;
+  opacity: 1;
+}
+
+.modal_greeting_text {
+  font-size: 3rem;
+  font-weight: 500;
+}
+
+.modal_name {
+  color: var(--lightblue_font);
+  font-size: 4rem;
+  font-weight: 700;
+}
+
 @media (max-width: 1350px) {
   .summary_greeting {
     display: none;
+  }
+  .animation_modal {
+    display: flex;
   }
 }
 
@@ -349,7 +379,7 @@
     height: 90px;
     stroke-width: 3px;
     stroke: #29abe2;
-  
+
     transform: rotate(90deg);
     margin-left: 40px;
     margin-top: -40px;
@@ -378,7 +408,7 @@
     width: 40px;
     height: 40px;
   }
-  
+
   .summary_number {
     font-size: 47px;
   }
@@ -426,7 +456,6 @@
 }
 
 @media (max-width: 420px) {
-
   .summary_headline {
     margin-left: -70px;
   }
@@ -435,65 +464,60 @@
     width: 130px;
     height: 110px;
     gap: 10px;
+  }
+
+  .summary_urgent_container {
+    width: 290px;
+    height: 110px;
+    /* margin-left: 130px; */
+  }
+
+  .summary_tasks_field {
+    width: 90px;
+    height: 100px;
+  }
+
+  .summary_tasks {
+    gap: 10px;
+  }
+
+  .summary_date {
+    font-size: 14px;
+  }
+
+  .summary_urgent_text {
+    font-size: 12px;
+  }
+
+  .summary_number {
+    font-size: 40px;
+  }
+
+  .summary_tasks_text {
+    font-size: 12px;
+  }
+
+  .arrow_icon {
+    width: 36px;
+    height: 36px;
+  }
+
+  .summary_img_hook {
+    width: 36px;
+    height: 36px;
+  }
+
+  .summary_img {
+    width: 36px;
+    height: 36px;
+  }
+
+  .summary_doings {
+    height: 124px;
+    width: auto;
+  }
+
+  .summary_urgent_field {
+    gap: 2px;
+  }
 }
-
-.summary_urgent_container {
-  width: 290px;
-  height: 110px;
-  /* margin-left: 130px; */
-}
-
-.summary_tasks_field {
-  width: 90px;
-  height: 100px;
-}
-
-.summary_tasks {
-  gap: 10px;
-}
-
-.summary_date {
-  font-size: 14px;
-}
-
-.summary_urgent_text {
-  font-size: 12px;
-}
-
-.summary_number {
-  font-size: 40px;
-}
-
-.summary_tasks_text {
-  font-size: 12px;
-}
-
-.arrow_icon {
-  width: 36px;
-  height: 36px;
-}
-
-.summary_img_hook {
-  width: 36px;
-  height: 36px;
-}
-
-.summary_img {
-  width: 36px;
-  height: 36px;
-}
-
-.summary_doings {
-  height: 124px;
-  width: auto;
-}
-
-.summary_urgent_field {
-  gap: 2px;
-}
-
-
-
-
-}
-
