--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -16,9 +16,9 @@
 }
 
 #add_task_popup_content {
-    width: 100%;
+    width: fit-content;
     max-width: 850px;
-    height: 60vh;
+    height: fit-content;
     background-color: white;
     border-radius: 16px;
     display: flex;
@@ -315,3 +315,27 @@ h1 {
 #subtask_content_edit p:hover .icon {
     display: flex;
 }
+
+#input_assigned_content_edit {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    background-color: white;
+    max-height: 100px;
+    overflow-y: auto;
+    padding: 8px 0px;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
+  }
+
+  #assigned_input_edit:focus {
+    outline: none;
+  }
+  
+  #input_assigned_content_edit div {
+    width: 250px;
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 16px;
+    gap: 8px;
+  }
