--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -63,13 +63,6 @@
   box-shadow: 0px 0 4px 0px rgba(0, 0, 0, 0.1);
 }
 
-/* .add_contact_overlay_bg {
-  background-color: #D1D1D1;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-} */
-
 .add_new_contact_btn_caontainer {
   display: flex;
   position: fixed;
@@ -92,6 +85,7 @@
   gap: 16px;
   cursor: pointer;
   margin-right: 8px;
+  border: none;
 }
 
 .add_new_contact_btn:hover {
@@ -427,6 +421,7 @@
 } */
 
 .add_contact_overlay {
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   position: absolute;
   justify-content: center;
@@ -579,6 +574,7 @@
   font-size: 20px;
   font-weight: 400;
   cursor: pointer;
+  border: none;
 }
 
 .contact_overlay_add_contact_card_right_btn_cancel:hover {
@@ -609,6 +605,7 @@
   font-weight: 700;
   color: #ffffff;
   cursor: pointer;
+  border: none;
 }
 
 .contact_overlay_add_contact_card_right_btn_create:hover {
