--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -1,341 +1,345 @@
 .container {
-    display: flex;
+  display: flex;
 }
 
 #add_task_popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgb(211, 211, 211, 0.5);
-    display: none;
-    align-items: center;
-    justify-content: center;
-    z-index: 999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(211, 211, 211, 0.5);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
 }
 
 #add_task_popup_content {
-    width: fit-content;
-    max-width: 850px;
-    height: fit-content;
-    background-color: white;
-    border-radius: 16px;
-    display: flex;
+  width: fit-content;
+  max-width: 850px;
+  height: fit-content;
+  background-color: white;
+  border-radius: 16px;
+  display: flex;
 }
 
 #card_popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgb(211, 211, 211, 0.5);
-    display: none;
-    align-items: center;
-    justify-content: center;
-    z-index: 999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(211, 211, 211, 0.5);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
 }
 
 #card_popup_content {
-    width: 100%;
-    background-color: white;
-    border-radius: 16px;
-    display: flex;
-    max-width: 600px;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
-    border-radius: 30px;
-    justify-content: center;
-    align-items: center;
-    height: fit-content;
+  width: 100%;
+  background-color: white;
+  border-radius: 16px;
+  display: flex;
+  max-width: 600px;
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
+  border-radius: 30px;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
 }
 
 .side_bar_position_container {
-    position: relative;
-    min-height: 100vh;
-    width: 200px;
-    min-width: 200px;
-
+  position: relative;
+  min-height: 100vh;
+  width: 200px;
+  min-width: 200px;
 }
 
 .card_footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .profiles {
-    display: flex;
-    max-width: 150px;
-    overflow-x: hidden;
+  display: flex;
+  max-width: 150px;
+  overflow-x: hidden;
 }
 
 main {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
-    font-size: 40px;
+  font-size: 40px;
 }
 
 .headline_section {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .board_content {
-    padding: 0px 40px;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+  padding: 0px 40px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .headline_input_container {
-    display: flex;
-    align-items: center;
-    gap: 24px;
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
 
 .headline_input {
-    display: flex;
-    background-color: white;
-    border: 1px solid black;
-    border-radius: 10px;
-    align-items: center;
+  display: flex;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+  align-items: center;
 }
 
-.headline_input input, .headline_input input:focus {
-    border: none;
-    outline: none;
-    border-radius: 10px;
-    padding: 0px 8px;
+.headline_input input,
+.headline_input input:focus {
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  padding: 0px 8px;
 }
 
 .br {
-    min-width: 1px;
-    height: 20px;
-    background-color: rgba(0, 0, 0, 0.4);
+  min-width: 1px;
+  height: 20px;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .drag_hover {
-    background-color: lightgray;
+  background-color: lightgray;
 }
 
 .drag_transform {
-    transform: rotate(356deg);
+  transform: rotate(356deg);
 }
 
 .add_task_button {
-    color: white;
-    background-color: rgb(42, 54, 71);
-    height: 32px;
-    border: none;
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-    font-size: 24px;
-    padding: 8px;
-    cursor: pointer;
+  color: white;
+  background-color: rgb(42, 54, 71);
+  height: 32px;
+  border: none;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  padding: 8px;
+  cursor: pointer;
 }
 
 .add_task_button img {
-    width: 32px;
+  width: 32px;
 }
 
 .category_section {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-    flex: 1;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  flex: 1;
 }
 
 .category {
-    width: 240px;
-    display: flex;
-    flex-direction: column;
+  width: 240px;
+  display: flex;
+  flex-direction: column;
 }
 
 .category_headline {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 24px;
-    color: #42526E;
-    margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 24px;
+  color: #42526e;
+  margin-bottom: 16px;
 }
 
 .category_headline img {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .category_content {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  flex: 1;
 }
 
 .card {
-    background-color: white;
-    padding: 16px;
-    border-radius: 16px;
-    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    height: fit-content;
-    cursor: pointer;
+  background-color: white;
+  padding: 16px;
+  border-radius: 16px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  height: fit-content;
+  cursor: pointer;
 }
 
 .card h2 {
-    font-size: 24px;
-    margin: 0;
+  font-size: 24px;
+  margin: 0;
 }
 
 .card_headline {
-    padding-top: 8px;
+  padding-top: 8px;
 }
 
 .card_headline span {
-    background-color: rgb(0, 56, 255);
-    color: white;
-    padding: 8px;
-    border-radius: 8px;
+  background-color: rgb(0, 56, 255);
+  color: white;
+  padding: 8px;
+  border-radius: 8px;
 }
 
 .card_description {
-    color: rgb(168, 168, 168);
+  color: rgb(168, 168, 168);
 }
 
-.card_subtasks progress{
-    width: 50%;
+.card_subtasks progress {
+  width: 50%;
 }
 
 .card_subtasks label {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .empty_card {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    background-color: lightgray;
-    border-radius: 16px;
-    border: 1px dashed rgb(128, 128, 128);
-    color: gray;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  background-color: lightgray;
+  border-radius: 16px;
+  border: 1px dashed rgb(128, 128, 128);
+  color: gray;
 }
 
 .edit_content {
-    display: flex;
-    flex-direction: column;
-    padding: 16px 0px;
-    width: 80%;
+  display: flex;
+  flex-direction: column;
+  padding: 16px 0px;
+  width: 80%;
 }
 
 .edit_content h2 {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .button_container_edit {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 16px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 16px;
 }
 
 .prio_category_span_edit {
-    display: flex;
-    padding: 4px 8px;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-    flex: 1 0 0;
-    border-radius: 10px;
-    background: #FFF;
-    cursor: pointer;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
+  display: flex;
+  padding: 4px 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex: 1 0 0;
+  border-radius: 10px;
+  background: #fff;
+  cursor: pointer;
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
 }
 
 .prio_category_span_edit h2 {
-    margin: 0;
+  margin: 0;
 }
 
 .input_edit {
-    width: 440px;
-    display: flex;
-    padding: 8px 21px;
-    align-items: center;
-    gap: 10px;
-    align-self: stretch;
-    border-radius: 10px;
-    border: 1px solid #D1D1D1;
-    background: #FFF;
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%;
+  width: 440px;
+  display: flex;
+  padding: 8px 21px;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+  border-radius: 10px;
+  border: 1px solid #d1d1d1;
+  background: #fff;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
 }
 
 #subtask_content_edit {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 8px;
-    gap: 8px;
-    max-height: 100px;
-    overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 8px;
+  gap: 8px;
+  max-height: 100px;
+  overflow-y: auto;
 }
 
 #subtask_content_edit p {
-    width: 80%;
-    margin: 0;
-    display: flex;
-    justify-content: space-between;
-    cursor: pointer;
-    padding: 4px;
-    border-radius: 8px;
+  width: 80%;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  padding: 4px;
+  border-radius: 8px;
 }
 
 #subtask_content_edit p span {
-    display: flex;
-    align-items: center;
-    gap: 8px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
 #subtask_content_edit p:hover {
-    background-color: lightgray;
+  background-color: lightgray;
 }
 
 #subtask_content_edit p:hover .icon {
-    display: flex;
+  display: flex;
 }
 
 #input_assigned_content_edit {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    background-color: white;
-    max-height: 100px;
-    overflow-y: auto;
-    padding: 8px 0px;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
-  }
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  background-color: white;
+  max-height: 100px;
+  overflow-y: auto;
+  padding: 8px 0px;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
+}
 
-  #assigned_input_edit:focus {
-    outline: none;
-  }
-  
-  #input_assigned_content_edit div {
-    width: 250px;
-    display: flex;
-    justify-content: flex-start;
-    margin-left: 16px;
-    gap: 8px;
-  }
+#assigned_input_edit:focus {
+  outline: none;
+}
+
+#input_assigned_content_edit div {
+  width: 250px;
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 16px;
+  gap: 8px;
+}
+
+.button_container_edit img {
+    cursor: pointer;
+}
