--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -210,6 +210,7 @@ h1 {
 }
 
 .card_headline img {
+    display: none;
     width: 24px;
     object-fit: contain;
     cursor: pointer;
@@ -369,4 +370,21 @@ h1 {
 
 .button_container_edit img {
     cursor: pointer;
+}
+
+.button_container_edit button {
+    border: none;
+    display: inline-flex;
+    align-items: center;
+    gap: 4px;
+    background-color: rgb(42,54,71);
+    border-radius: 8px;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+    transition: background-color 80ms linear;
+}
+
+.button_container_edit button:hover {
+    background-color: rgb(41, 171, 226);
 }
