--- a/assets/templates/sidebar/sidebar.css
+++ b/assets/templates/sidebar/sidebar.css
@@ -1,6 +1,6 @@
 :root {
   --main_color: #2a3647;
-  --main_color_lighter: #354458;
+  --main_color_lighter: #2A3D59;
   --main_color_dark: #091931;
   --background_main: #f6f7f8;
   --card_color: #ffffff;
@@ -62,6 +62,7 @@
 
 .sidebar_menu:focus {
   background-color: var(--main_color_dark);
+  border-radius: 10px;
 }
 
 .sidebar_menu :first-child {
@@ -78,6 +79,7 @@
 .sidebar_menu:hover {
   cursor: pointer;
   background-color: var(--main_color_lighter);
+  border-radius: 10px;
 }
 
 .sidebar_menu span:hover {
