--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -755,11 +755,11 @@
   }
 
   .contacts_right_side_flex {
-    position: absolute;
+    position: fixed;
     width: auto;
     height: 100vh;
     background-color: #f6f7f8;
-    min-width: 309px;
+    min-width: 425px;
   }
 
   .add_new_contact_btn_caontainer {
@@ -848,15 +848,36 @@
   }
 
   .contacts_bigcard_edit {
-    display: none;
+    position: fixed;
+    bottom: 100px;
+    right: 10px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 116px;
+    height: 100px;
+    background-color: #ffffff;
+    border-radius: 20px 20px 0px 20px;
+    /* display: none; */
   }
 
   .contacts_bigcard_Information_text {
     margin: 0;
   }
+
+  .edit_mobile_div {
+    position: absolute;
+    right: 10px;
+    top: 100px;
+  }
 }
 
 @media (max-width: 420px) {
+
+  .contacts_right_side_flex {
+    min-width: 309px;
+  }
+
   .add_contact_scroll_container {
     width: 100vh;
   }
