--- a/assets/css/mobile_board.css
+++ b/assets/css/mobile_board.css
@@ -1,54 +1,106 @@
-@media(max-width: 1325px) {
-    .category {
-        width: 200px;
-    }
+.mobile_headline_input_container {
+  display: none;
+  align-items: center;
+  gap: 24px;
+  width: 100%;
+  margin-bottom: 16px;
 }
 
-@media(max-width: 1170px) {
-    .category_section {
-     flex-direction: column;   
-     align-items: center;
-    }
-
-    .category {
-        width: 240px;
-    }
-    .category {
-        width: 100%;
-    }
-
-    .card {
-        width: 240px;
-        min-width: 240px;
-    }
+.mobile_headline_input {
+  display: flex;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+  align-items: center;
+  width: 100%;
 }
 
-@media(max-width: 1000px) {
-    .category_section {
-        align-items: flex-start;
-    }
-    .side_bar_position_container {
-        display: none;
-    }
-    .category_content {
-        flex-direction: row;
-        overflow-x: auto;
-        max-width: 800px;
-    }
-
-    .card_headline img {
-        display: flex;
-    }
+.mobile_headline_input input,
+.mobile_headline_input input:focus {
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  padding: 0px 8px;
+  width: 100%;
 }
 
-@media(max-width: 900px) {
- .category_content {
+@media (max-width: 1325px) {
+  .category {
+    width: 200px;
+  }
+}
+
+@media (max-width: 1170px) {
+  .category_section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .category {
+    width: 240px;
+  }
+  .category {
+    width: 100%;
+  }
+
+  .card {
+    width: 240px;
+    min-width: 240px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .category_section {
+    align-items: flex-start;
+  }
+  .side_bar_position_container {
+    display: none;
+  }
+  .category_content {
+    flex-direction: row;
+    overflow-x: auto;
+    max-width: 800px;
+  }
+
+  .card_headline img {
+    display: flex;
+  }
+
+  .headline_input_container {
+    display: none;
+  }
+
+  .mobile_headline_input_container {
+    display: flex;
+  }
+}
+
+@media (max-width: 900px) {
+  .category_content {
     max-width: 600px;
- }
+  }
 }
 
-@media(max-width: 700px) {
+@media (max-width: 700px) {
+  .category_content {
+    max-width: 400px;
+  }
+}
+
+@media(max-width: 500px) {
     .category_content {
-       max-width: 400px;
+        max-width: 300px;
     }
-   }
+}
+
+@media(max-width: 400px) {
+    .category_content {
+        max-width: 276px;
+    }
+}
+
+@media(max-width: 350px) {
+    .board_content {
+        padding: 0px 16px;
+    }
+}
