add resize function for add task button

--- a/assets/css/mobile_board.css
+++ b/assets/css/mobile_board.css
@@ -85,6 +85,12 @@
   }
 }
 
+@media(max-width: 1000px) {
+    .form_content {
+      flex-direction: column;
+  }
+}
+
 @media (max-width: 900px) {
   .category_content {
     max-width: 600px;
