--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -290,7 +290,7 @@
   color: #ffffff;
   margin-left: 20px;
   font-size: 47px;
-  margin-bottom: 45px;
+  margin-bottom: 32px;
 }
 
 .profil_ellipse_info_text {
@@ -674,6 +674,7 @@
     .contact_overlay_add_contact_card_right_close_x {
         margin-top: -335px;
         margin-left: 320px;
+        color: #ffffff;
     }
 
     .contact_overlay_add_contact_card_right_center {
@@ -687,6 +688,10 @@
     .contact_overlay_add_contact_card_right_inputfield {
         width: 320px;
         height: 40px;
+        opacity: 0.6;
+        border: solid 1px #d1d1d1;
+        font-weight: 100;
+        font-size: 18px;
     }
 
     .contact_overlay_add_contact_card_right_btn_cancel {
@@ -702,14 +707,14 @@
     }
 
     .person_img {
-        background-position: 300px 9px;
+      background-position: 280px 9px;
     }
 
     .mail_img {
-        background-position: 300px 9px;
+      background-position: 280px 9px;
     }
     .phone_img {
-        background-position: 300px 9px;
+      background-position: 280px 9px;
     }
 
     .stroke_blue_horizontal {
@@ -974,10 +979,14 @@
   .contact_overlay_add_contact_card_right_inputfield {
     width: 220px;
     height: 36px;
-    background-position: 216px 9px;
+    background-position: 184px 4px;
     opacity: 0.6;
     border: solid 1px #D1D1D1;
     font-weight: 100;
     font-size: 16px;
   }
+}
+
+.contact_overlay_add_contact_card_right_btn_create {
+  margin-top: 14px;
 }
