--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -22,7 +22,7 @@
     transform: translate(0, 0);
   }
   100% {
-    transform: translate(-40vw, -32vh); /* Bewegung in die obere linke Ecke */
+    transform: translate(-40vw, -32vh);
   }
 }
 
