--- a/assets/css/overlay.css
+++ b/assets/css/overlay.css
@@ -1,472 +1,399 @@
 .overlay {
-    display: flex;
-    padding: 48px 40px;
-    flex-direction: column;
-    gap: 24px;
-    flex: 1;
+  display: flex;
+  padding: 48px 40px;
+  flex-direction: column;
+  gap: 24px;
+  flex: 1;
 }
 
 .overlay_header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    align-self: stretch;    
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
 }
 
 .overlay_user_task {
-    display: flex;
-    padding: 4px 24px;
-    align-items: flex-start;
-    gap: 10px;
-    border-radius: 8px;
-    background: #0038FF;
-    color: #FFF;
+  display: flex;
+  padding: 4px 24px;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 8px;
+  background: #0038ff;
+  color: #fff;
 
-    /* Version 2/t5 */
-    font-family: "Open Sans";
-    font-size: 23px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 27.6px */
+  /* Version 2/t5 */
+  font-family: "Open Sans";
+  font-size: 23px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%; /* 27.6px */
 }
 
 .close {
-    display: flex;
-    width: 32px;
-    height: 32px;
-    padding: 4px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 56px;
-    cursor: pointer;
+  display: flex;
+  width: 32px;
+  height: 32px;
+  padding: 4px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 56px;
+  cursor: pointer;
 }
 
 .closeIcon {
-    width: 24px;
-    height: 24px;
-    flex-shrink: 0;
+  width: 24px;
+  height: 24px;
+  flex-shrink: 0;
 }
 
 .overlay_text {
-    align-self: stretch;
-    color: var(--black, #000);
-
-    /* Version 2/t6 */
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 24px */
+  align-self: stretch;
+  color: var(--black, #000);
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .overlay_flex_field {
-    display: flex;
-    align-items: flex-start;
-    gap: 25px;
-    align-self: stretch;
+  display: flex;
+  align-items: flex-start;
+  gap: 25px;
+  align-self: stretch;
 }
 
 .due_date {
-    color: var(--Version-2-main-color, #2A3647);
-
-    /* Version 2/t6 */
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 24px */
+  color: var(--Version-2-main-color, #2a3647);
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .date {
-    color: var(--black, #000);
-
-    /* Version 2/t6 */
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 24px */
+  color: var(--black, #000);
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .overlay_priority {
-    display: flex;
-    padding: 4px 18px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 10px;
+  display: flex;
+  padding: 4px 18px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 10px;
 }
 
 .priority {
-    display: flex;
-    padding: 4px 18px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px; 
+  display: flex;
+  padding: 4px 18px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .stretch {
-    align-self: stretch;
+  align-self: stretch;
 }
 
 .overlay_assigned_to {
-    align-self: stretch;
-    color: var(--Version-2-main-color, #2A3647);
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; 
-    max-height: 200px;
-    overflow-y: auto;
+  align-self: stretch;
+  color: var(--Version-2-main-color, #2a3647);
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+  max-height: 200px;
+  overflow-y: auto;
 }
 
 .assigned_to_container {
-    display: flex;
-    padding: 7px 16px;
-    align-items: center;
-    align-self: stretch;
-    border-radius: 10px;
-    gap: 8px;
+  display: flex;
+  padding: 7px 16px;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 10px;
+  gap: 8px;
 }
 
 .assigned_to_container label {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .assigned_to_field {
-    display: flex;
-    align-items: center;
-    gap: 16px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
 .user_img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
-.user_name{
-    color: #000;
-
-    /* Version 2/t6 */
-    font-family: "Open Sans";
-    font-size: 19px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 22.8px */
+.user_name {
+  color: #000;
+  font-family: "Open Sans";
+  font-size: 19px;
+  font-weight: 400;
 }
 
 .overlay_subtasks {
-    align-self: stretch;
-    color: var(--Version-2-main-color, #2A3647);
-
-    /* Version 2/t6 */
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 24px */
+  align-self: stretch;
+  color: var(--Version-2-main-color, #2a3647);
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .subtasks_check {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 4px;
-    align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+  align-self: stretch;
 }
 
 .subtask {
-    display: flex;
-    height: 32px;
-    padding: 0px 16px;
-    align-items: center;
-    gap: 16px;
+  display: flex;
+  height: 32px;
+  padding: 0px 16px;
+  align-items: center;
+  gap: 16px;
 }
 
 .subtasks_check_field {
-    display: flex;
-    width: 24px;
-    height: 24px;
-    padding: 4px;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  width: 24px;
+  height: 24px;
+  padding: 4px;
+  justify-content: center;
+  align-items: center;
 }
 
 .subtasks_check_text {
-    color: #000;
-
-    /* Version 2/body */
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 19.2px */
+  color: #000;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 .overlay_edit {
-    display: flex;
-    align-self: flex-end;
-    justify-content: space-between;
-    gap: 8px;
+  display: flex;
+  align-self: flex-end;
+  justify-content: space-between;
+  gap: 8px;
 }
 
 .edit_area {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
 }
 
 .edit_area_img {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 }
 
 .edit_text {
-    color: var(--Version-2-main-color, #2A3647);
-
-    /* Version 2/body */
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 19.2px */
+  color: var(--Version-2-main-color, #2a3647);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
 }
 
 .edit_overlay {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    background: #FFF;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  background: #fff;
 }
 
 .edit_container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 16px;
-    align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 16px;
+  align-self: stretch;
 }
 
 .edit_title_container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-    align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  align-self: stretch;
 }
 
 .edit_title_headline {
-    color: var(--Version-2-main-color, #2A3647);
-
-    /* Version 2/t6 */
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 24px */
+  color: var(--Version-2-main-color, #2a3647);
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .edit_title {
-    display: flex;
-    padding: 12px 21px;
-    align-items: center;
-    gap: 10px;
-    align-self: stretch;
-    border-radius: 10px;
-    border: 1px solid var(--Style, #D1D1D1);
-    background: #FFF;  
+  display: flex;
+  padding: 12px 21px;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+  border-radius: 10px;
+  border: 1px solid var(--Style, #d1d1d1);
+  background: #fff;
 }
 
 .edit_title_text {
-    flex: 1 0 0;
-    color: var(--black, #000);
-
-    /* Version 2/t6 */
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 24px */
+  flex: 1 0 0;
+  color: var(--black, #000);
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .edit_description {
-    display: flex;
-    height: 60px;
-    padding: 18px 16px;
-    align-items: flex-start;
-    gap: 10px;
-    align-self: stretch;
-    border-radius: 10px;
-    border: 1px solid var(--Style, #D1D1D1);
-    background: #FFF;
+  display: flex;
+  height: 60px;
+  padding: 18px 16px;
+  align-items: flex-start;
+  gap: 10px;
+  align-self: stretch;
+  border-radius: 10px;
+  border: 1px solid var(--Style, #d1d1d1);
+  background: #fff;
 }
 
 .edit_description_text {
-    flex: 1 0 0; 
-    color: var(--black, #000);
-    font-family: "Open Sans";
-    font-size: 21px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 25.2px */
+  flex: 1 0 0;
+  color: var(--black, #000);
+  font-family: "Open Sans";
+  font-size: 21px;
+  font-weight: 400;
 }
 
 .edit_description_undertext {
-    height: 12px;
-    align-self: stretch;
-    color: rgba(255, 129, 144, 0.00);
-
-    /* Version 2/t7 */
-    font-family: Inter;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 14.4px */
+  height: 12px;
+  align-self: stretch;
+  color: rgba(255, 129, 144, 0);
+  font-size: 12px;
+  font-weight: 400;
 }
 
-.edit_date_container{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 4px;
-    align-self: stretch;
+.edit_date_container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+  align-self: stretch;
 }
 
 .edit_date_input {
-    display: flex;
-    padding: 12px 16px;
-    justify-content: space-between;
-    align-items: center;
-    align-self: stretch;
-    border-radius: 10px;
-    border: 1px solid var(--Style, #D1D1D1);
-    background: #FFF;
-    color: var(--black, #000);
-
-    /* Version 2/t6 */
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 24px */
+  display: flex;
+  padding: 12px 16px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 10px;
+  border: 1px solid var(--Style, #d1d1d1);
+  background: #fff;
+  color: var(--black, #000);
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .edit_priority_area {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-    align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  align-self: stretch;
 }
 
 .priority_headline {
-    color: #42526E;
-    font-family: "Open Sans";
-    font-size: 19px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%; /* 22.8px */
+  color: #42526e;
+  font-family: "Open Sans";
+  font-size: 19px;
+  font-weight: 700;
 }
 
 .priority_urgent_container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    align-self: stretch;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  align-self: stretch;
 }
 
 .priority_urgent_field {
-    display: flex;
-    padding: 16px 10px;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
-    flex: 1 0 0;
-    border-radius: 10px;
-    background: var(--white, #FFF);
-    
-    /* nuevo */
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
+  display: flex;
+  padding: 16px 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex: 1 0 0;
+  border-radius: 10px;
+  background: var(--white, #fff);
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
 }
 
 .edit_priority_btn_text {
-    color: #000;
-
-    /* Version 2/t6 */
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 24px */
+  color: #000;
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .edit_assignedto_area {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-    align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  align-self: stretch;
 }
 
 .edit_assignedto_secltion {
-    display: flex;
-    width: 440px;
-    padding: 12px 16px;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 10px;
-    border: 1px solid var(--Style, #D1D1D1);
-    background: var(--white, #FFF);
-    color: var(--black, #000);
-
-    /* Version 2/t6 */
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 120%; /* 24px */
+  display: flex;
+  width: 440px;
+  padding: 12px 16px;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 10px;
+  border: 1px solid var(--Style, #d1d1d1);
+  background: var(--white, #fff);
+  color: var(--black, #000);
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .edit_assignedto_profil {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 45px;
-    background: var(--white, #FFF);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 45px;
+  background: var(--white, #fff);
 }
 
 .edit_subtasks_area {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-    align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  align-self: stretch;
 }
 
 .edit_ok_btn {
-    display: flex;
-    padding: 16px;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
-    border-radius: 10px;
-    background: #2A3647;
+  display: flex;
+  padding: 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  border-radius: 10px;
+  background: #2a3647;
 }
 
 .edit_ok_text {
-    color: #FFF;
-    font-family: Inter;
-    font-size: 21px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%; /* 25.2px */
+  color: #fff;
+  font-size: 21px;
+  font-weight: 700;
 }
