--- a/assets/templates/add_task/add_task_template.css
+++ b/assets/templates/add_task/add_task_template.css
@@ -146,12 +146,11 @@ h1 {
 
 .select {
     color: #000;
-    /* Version 2/t6 */
     font-family: Inter;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
-    line-height: 120%; /* 24px */
+    line-height: 120%;
     width: 100%;
     border-radius: 10px;
     border: 1px solid #D1D1D1;
