--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -214,6 +214,7 @@ h1 {
     width: 40px;
     object-fit: contain;
     cursor: pointer;
+    transform: rotate(90deg);
 }
 
 .card_setting_popup {
