--- a/assets/css/add_task_second.css
+++ b/assets/css/add_task_second.css
@@ -3,18 +3,34 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-    background-color: white;
-    max-height: 100px;
     overflow-y: auto;
     padding: 8px 0px;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
+    list-style-type: none;
+    scrollbar-width: thin;
+    height: 100%;
+    margin: 0;
   }
   
   #assigned_input:focus {
     outline: none;
   }
+
+  .contact_list {
+    overflow: hidden;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    background-color: white;
+    max-height: 100px;
+    overflow-y: auto;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
+    list-style-type: none;
+    scrollbar-width: thin;
+    border-radius: 10px;
+  }
   
-  #input_assigned_content div {
+  .contact_item {
     width: 250px;
     display: flex;
     justify-content: flex-start;
@@ -83,6 +99,14 @@
 
   .sub_container {
     min-width: 450px;
+  }
+
+  .contact {
+    accent-color: #438ecf;
+  }
+
+  .contact:checked+.contact_item {
+    background-color: blue;
   }
   
   @media (max-width: 1350px) {
