--- a/assets/css/overlay.css
+++ b/assets/css/overlay.css
@@ -24,13 +24,11 @@
   border-radius: 8px;
   background: #0038ff;
   color: #fff;
-
-  /* Version 2/t5 */
   font-family: "Open Sans";
   font-size: 23px;
   font-style: normal;
   font-weight: 400;
-  line-height: 120%; /* 27.6px */
+  line-height: 120%; 
 }
 
 .close {
