++ sidebar background active page fix;

--- a/assets/templates/sidebar/sidebar.html
+++ b/assets/templates/sidebar/sidebar.html
@@ -14,30 +14,50 @@
       />
 
       <div class="sidebar_menu_container">
-        <a id="sidebar_0" class="sidebar_menu" onclick="changeCurrentPage('summary')">
+        <a
+          id="sidebar_0"
+          class="sidebar_menu"
+          onclick="changeCurrentPage('summary')"
+        >
           <img src="./assets/img/sidebar/summary.png" alt="Summary" />
           <span>Summary</span>
         </a>
-        <a id="sidebar_1" class="sidebar_menu" onclick="changeCurrentPage('add_task')">
-          <img src="./assets/img/sidebar/addTask.png" alt="Add Task"/>
+        <a
+          id="sidebar_1"
+          class="sidebar_menu"
+          onclick="changeCurrentPage('add_task')"
+        >
+          <img src="./assets/img/sidebar/addTask.png" alt="Add Task" />
           <span>Add Task</span>
         </a>
-        <a id="sidebar_2" class="sidebar_menu" onclick="changeCurrentPage('board')">
-          <img src="./assets/img/sidebar/board.png" alt="Board"/>
+        <a
+          id="sidebar_2"
+          class="sidebar_menu"
+          onclick="changeCurrentPage('board')"
+        >
+          <img src="./assets/img/sidebar/board.png" alt="Board" />
           <span>Board</span>
         </a>
-        <a id="sidebar_3" class="sidebar_menu" onclick="changeCurrentPage('contacts')">
-          <img src="./assets/img/sidebar/contacts.png" alt="Contacts"/>
+        <a
+          id="sidebar_3"
+          class="sidebar_menu"
+          onclick="changeCurrentPage('contacts')"
+        >
+          <img src="./assets/img/sidebar/contacts.png" alt="Contacts" />
           <span>Contacts</span>
         </a>
       </div>
 
       <div class="sidebar_footer_link">
-        <a id="sidebar_4" onclick="changeCurrentPage('privacy_policy')">Privacy Policy</a>
-        <a id="sidebar_5" onclick="changeCurrentPage('legal_notice')">Legal notice</a>
+        <a id="sidebar_4" onclick="changeCurrentPage('privacy_policy')"
+          >Privacy Policy</a
+        >
+        <a id="sidebar_5" onclick="changeCurrentPage('legal_notice')"
+          >Legal notice</a
+        >
       </div>
     </section>
 
-    <script src="./js/sidebar.js"></script>
+    <script src="../../../script.js"></script>
   </body>
 </html>
