++ start animation refracture;

--- a/assets/css/landing_page.css
+++ b/assets/css/landing_page.css
@@ -19,14 +19,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100dvh;
 }
 
 .landing_page_mobile {
   display: none;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100dvh;
 }
 
 /********** MEDIA QUERY *********/
