--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,46 +1,3 @@
-
-/********** ANIMATION **********/
-
-.modal {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background-color: #f6f7f8;
-  z-index: 900;
-  opacity: 1;
-  transition: opacity 0.5s ease;
-}
-
-.modal.fade-out {
-  opacity: 0.5;
-}
-
-.landing_page_desktop img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  animation: moveTopLeft 1s ease-out forwards;
-  animation-delay: 0.4s;
- 
-}
-
-@keyframes moveTopLeft {
-  0% {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
-  }
-  100% {
-    top: 1rem;
-    left: 1rem;
-    transform: translate(0, 0) scale(0.4);
-  }
-}
-
-
 /********** HEAD **********/
 
 .login_page_container {
@@ -51,9 +8,10 @@
 }
 
 .login_page_head {
+  position: relative;
   display: flex;
   justify-content: space-between;
-  padding: 60px 122px 0 77px;
+  padding: 0px 122px 0 77px;
   margin-left: 12px;
 }
 
@@ -62,7 +20,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: -90px;
   gap: 35px;
 }
 
